# ethnic-wear-trend-analysis

./: .gitignore  README.md  index.html  pyproject.toml
.claude/: CLAUDE.md
configs/: local.yaml
data/: brand_registry.json
docs/: color_b_canary_results_2026_05_15.md  color_b_prior_art_guide.md  color_b_prompt_v010_spec.md  color_c_full_canary_page0_results.md  color_c_illumination_spec.md  color_c_phase2_p_ablation_results.md  color_c_phase3_sample100_results.md  color_c_phase3_sample100_results_p1.md  pipeline_spec.md  plan_be_payload_2026-04-22.md  roadmap.md  spec.md  spec_diff.md  sync_2026-04-24_agenda.md
sample_data/: sample_instagram_posts.json  sample_youtube_videos.json
sample_data/contract_fixtures/: enriched.json  normalized.json  raw_instagram.json  raw_youtube.json  trend_cluster_summary.json
scripts/: _html_utils.py  _sql_utils.py  analyze_canonical_breakdown.py  analyze_drop_reasons.py  analyze_technique_distribution.py  backfill_12w.sh  backfill_24w.sh  backfill_collected_at.py  backfill_missing_blobs.py  build_brand_seed_list.py  build_color_preset.py  build_netlify_deploy.py  build_review_html.py  build_smoke_montage.py  build_stepwise_montage.py  collect_skin_lab.py  color_c_full_canary_compare.py  color_c_phase2_p_ablation.py  color_c_phase3_canary.py  color_c_render_compare_html.py  compare_april_monthly_top.py  cost_audit.py  count_posting_rows.py  debug_pipeline_b.py  diag_canonical_pool.py  diag_cluster_mismatch.py  diagnose_v2_3_quality.py  download_blobs.py  extract_missing_thumbnails.py  init_starrocks_schema.py  m3g_video_smoke.py  m3h_youtube_smoke.py  monthly_gf_rollup.py  pilot_llm_bbox.py  pipeline_b_smoke.py  post_backfill_pipeline.sh  render_canonical_smoke_html.py  render_color_preset_html.py  rescue_color_preset_from_log.py  run_ethnic_smoke.py  (+18 more)
src/: settings.py
src/aggregation/: __init__.py  brand_distribution.py  build_cluster_summary.py  cluster_palette.py  color_palette.py  distribution_builder.py  item_distribution_builder.py  representative_builder.py  trajectory.py  vision_normalize.py
src/attributes/: azure_openai_llm_client.py  brand_registry.py  derive_styling_from_vision.py  extract_text_attributes.py  extract_text_attributes_llm.py  llm_signal_classifier.py  mapping_tables.py  openai_llm_client.py  unknown_signal_tracker.py
src/clustering/: assign_trend_cluster.py
src/contracts/: common.py  enriched.py  normalized.py  output.py  raw.py  vision.py
src/exporters/: __init__.py  build_backend_payload.py  write_json_output.py
src/exporters/starrocks/: __init__.py  dry_run.py  fake_writer.py  insert_writer.py  row_builder.py  sink_runner.py  stream_load_writer.py  writer.py
src/exporters/starrocks/ddl/: 01_item.sql  02_canonical_group.sql  03_canonical_object.sql  04_representative_weekly.sql  05_views_latest.sql  06_views_ethnic.sql  07_unknown_signal.sql  08_unknown_signal_view.sql  09_hashtag_weekly.sql  10_hashtag_weekly_view.sql
src/exporters/starrocks/migrations/: 001_brand_1_to_n_2026_04_28.sql  002_effective_item_count_2026_04_28.sql  003_brand_distribution_2026_04_29.sql  004_url_short_tag_2026_04_30.sql  005_unknown_signal_weekly_2026_05_01.sql  006_hashtag_weekly_2026_05_01.sql  (+4 more)
src/loaders/: _datetime.py  blob_downloader.py  raw_loader.py  sample_loader.py  starrocks_connect.py  starrocks_raw_loader.py  starrocks_reader.py  tsv_raw_loader.py  url_parsing.py
src/normalization/: normalize_content.py
src/pipelines/: _cli_common.py  load_enriched.py  run_attribute_pipeline.py  run_daily_pipeline.py  run_local_smoke_test.py  run_scoring_pipeline.py
src/scoring/: __init__.py  cluster_context.py  compute_scores.py  direction.py  normalize.py  score_cultural.py  score_history.py  score_history_weekly.py  score_momentum.py  score_social.py  score_youtube.py
src/utils/: dates.py  io.py  logging.py
src/vision/: __init__.py  bbox_utils.py  canonical_extractor.py  canonical_palette.py  canonical_palette_aggregator.py  color_extractor.py  color_family_preset.py  color_space.py  dynamic_palette.py  extract_color_features.py  extract_silhouette.py  factory.py  frame_quality.py  frame_source.py  garment_instance.py  gemini_client.py  hybrid_palette.py  illumination_correction.py  json_repair_util.py  llm_cache.py  llm_client.py  outfit_dedup.py  palette_merge_utils.py  pipeline_b_adapter.py  pipeline_b_extractor.py  post_palette.py  prompts.py  quality.py  scene_filter.py  scene_filter_clip.py  segformer_constants.py  traditional_filter.py  video_frame_selector.py
tests/fixtures/: canary_v010_post_ids.txt
tests/fixtures/tsv/: png_india_ai_fashion_inatagram_posting.tsv  png_india_ai_fashion_inatagram_profile.tsv  png_india_ai_fashion_youtube_posting.tsv  png_india_ai_fashionash_tag_search_result.tsv
tests/integration/: test_pipeline_b_extractor.py
tests/snapshot/: golden_summaries.json  test_daily_pipeline_snapshot.py
tests/unit/: test_bbox_utils.py  test_blob_downloader.py  test_brand_distribution.py  test_brand_registry.py  test_build_cluster_summary_fanout.py  test_canonical_extractor.py  test_canonical_palette.py  test_canonical_palette_aggregator.py  test_cluster_assignment.py  test_cluster_palette.py  test_cluster_silhouette_distribution.py  test_color_family_preset.py  test_color_palette.py  test_color_pick_v010_prompt.py  test_color_space.py  test_contract_fixtures.py  test_contracts_vision_ethnic.py  test_derive_styling_from_vision.py  test_direction_and_lifecycle.py  test_distribution_builder.py  test_dynamic_palette.py  test_early_data_edge_cases.py  test_frame_quality.py  test_frame_source.py  test_garment_instance.py  test_growth_rate.py  test_haul_signal.py  test_hybrid_palette.py  test_illumination_correction.py  test_item_distribution_builder.py  test_llm_signal_classifier.py  test_normalize.py  test_outfit_dedup.py  test_partial_activation_mass.py  test_pipeline_b_adapter.py  test_pipeline_b_scene_2stage.py  test_post_palette.py  test_quality.py  test_representative_builder.py  test_rule_based_attributes.py  (+31 more)
