[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ethnic-wear-trend-analysis"
version = "0.0.1"
description = "Indian ethnic wear short-term trend analysis harness (Instagram + YouTube)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings[yaml]>=2.2",
    # color_palette 의 LAB KMeans aggregation 이 daily pipeline 경로에 있어서 core 로 승격.
    # heavy vision (torch / transformers / ultralytics / opencv) 은 Step C 에서 별도
    # `vision` extras 로 격리 — color 담당 아닌 사람이 건너뛰어야 할 건 그쪽.
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pymysql>=1.1.2",
    "openai>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Heavy vision 의존성 — YOLOv8 + segformer_b2_clothes + 이미지 IO. 기본 `uv sync` 로 설치되지
# 않음. 협업 시 color 담당 아닌 사람은 이 extras 를 설치할 필요 없다 (core 레이어는 Protocol
# 뒤에서 DI 로 구현체를 주입받음 — Step D 연결 예정).
# 설치: `uv sync --extra vision` 또는 `uv sync --all-extras`.
vision = [
    "torch>=2.1",
    "transformers>=4.44",
    "ultralytics>=8.3",
    "pillow>=10.0",
    "opencv-python>=4.8",
    "google-genai>=1.73.1",
    "json-repair>=0.30",
]
# Azure Blob Storage loader — posting.tsv 의 image_paths 다운로드용.
# `[color]` 담당자만 설치. `.env` 에서 AZURE_STORAGE_CONNECTION_STRING 읽기.
blob = [
    "azure-storage-blob>=12.19",
    "azure-identity>=1.15",
    "python-dotenv>=1.0",
]

[project.scripts]
# 사용자 요청 이름: "attributes". hatchling sources 매핑(src="")으로 src/ prefix 가 설치 후 제거되므로
# 모듈 경로는 src.pipelines.* 가 아닌 pipelines.* 가 옳다 (설치 후 실제 import 경로).
attributes = "pipelines.run_attribute_pipeline:main"
scoring = "pipelines.run_scoring_pipeline:main"
daily = "pipelines.run_daily_pipeline:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/contracts",
    "src/loaders",
    "src/pipelines",
    "src/utils",
    "src/attributes",
    "src/clustering",
    "src/normalization",
    "src/vision",
    "src/aggregation",
    "src/scoring",
    "src/exporters",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"src/settings.py" = "settings.py"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
# 기본 테스트 수집 대상 — unit + snapshot 만. tests/integration/ 은 torch / transformers /
# ultralytics / 실 모델 다운로드 필요한 테스트라 수동 실행 (`uv run pytest tests/integration`).
testpaths = ["tests/unit", "tests/snapshot"]
